# _foreign_code_base

./: .gitmodules  CMakeLists.txt  README.md
exe_foreign/: CMakeLists.txt
exe_foreign/fee/: CMakeLists.txt
exe_foreign/fee/_fee_cmake_settings/: fee-main-set-compiler-settings.cmake
exe_foreign/fee/_fee_cmake_settings/_fle_cmake_settings/: fee-main-set-compiler-settings.cmake
exe_foreign/fees/: CMakeLists.txt
exe_foreign/fees/_fees_cmake_settings/: fees-first-set-compiler-settings.cmake  fees-second-set-compiler-settings.cmake
exe_foreign/fees/fees_first/: CMakeLists.txt
exe_foreign/fees/fees_second/: CMakeLists.txt
lib_foreign/: CMakeLists.txt
lib_foreign/catch_2/: CMakeLists.txt
lib_foreign/catch_2/_catch_cmake_settings/: catch-main-set-compiler-settings.cmake
lib_foreign/catch_2/_catch_cmake_settings/compiler-settings/: catch-common-set-linux-compiler-settings.cmake  catch-common-set-windows-compiler-settings.cmake  catch-main-set-windows-compiler-settings.cmake
lib_foreign/cpp_unit/: CMakeLists.txt
lib_foreign/cpp_unit/_cu_cmake_settings/: cu-main-set-compiler-settings.cmake
lib_foreign/cpp_unit/_cu_cmake_settings/compiler-settings/: cu-common-set-linux-compiler-settings.cmake  cu-main-set-windows-compiler-settings.cmake
lib_foreign/cpp_unit_clocker/: CMakeLists.txt
lib_foreign/cpp_unit_clocker/_cuc_cmake_settings/: cuc-main-set-compiler-settings.cmake
lib_foreign/cpp_unit_clocker/_cuc_cmake_settings/compiler-settings/: cuc-main-set-linux-compiler-settings.cmake  cuc-main-set-windows-compiler-settings.cmake
lib_foreign/cpp_unit_lite/: CMakeLists.txt
lib_foreign/cpp_unit_lite/_cul_cmake_settings/: cul-main-set-compiler-settings.cmake
lib_foreign/cpp_unit_lite/_cul_cmake_settings/compiler-settings/: cul-common-set-linux-compiler-settings.cmake  cul-main-set-windows-compiler-settings.cmake
lib_foreign/fle/: CMakeLists.txt
lib_foreign/fle/_fle_cmake_settings/: fle-main-set-compiler-settings.cmake
lib_foreign/fles/: CMakeLists.txt
lib_foreign/fles/_fles_cmake_settings/: fles-first-set-compiler-settings.cmake  fles-second-set-compiler-settings.cmake
lib_foreign/fles/fles_first/: CMakeLists.txt
lib_foreign/fles/fles_second/: CMakeLists.txt
lib_foreign/foreign_library_example/: CMakeLists.txt
lib_foreign/foreign_library_example/_fle_cmake_settings/: fle-main-set-compiler-settings.cmake  fle-set-compiler-settings.cmake
lib_foreign/foreign_library_example/_fle_cmake_settings/compiler-settings/: fle-common-set-linux-compiler-settings.cmake  fle-common-set-windows-compiler-settings.cmake  fle-set-linux-compiler-settings.cmake
lib_foreign/google_test_and_mock/: CMakeLists.txt
lib_foreign/google_test_and_mock/_gtm_cmake_settings/: gtm-mock-set-compiler-settings.cmake  gtm-test-set-compiler-settings.cmake
lib_foreign/google_test_and_mock/_gtm_cmake_settings/compiler-settings/: gtm-test-set-linux-compiler-settings.cmake  gtm-test-set-windows-compiler-settings.cmake
lib_foreign/google_test_and_mock/google_mock/: CMakeLists.txt
lib_foreign/google_test_and_mock/google_test/: CMakeLists.txt
lib_foreign/poco/: CMakeLists.txt
lib_foreign/poco/_poco_cmake_settings/: component-set-compiler-settings.cmake.example  poco-cppunit-facade-set-compiler-settings.cmake  poco-cppunit-set-compiler-settings.cmake  poco-foundation-set-compiler-settings.cmake  poco-json-set-compiler-settings.cmake  poco-set-compiler-settings.cmake  poco-seven-zip-set-compiler-settings.cmake  poco-util-set-compiler-settings.cmake  poco-xml-set-compiler-settings.cmake  poco-zip-set-compiler-settings.cmake
lib_foreign/poco/_poco_cmake_settings/compiler-settings/: poco-common-set-linux-compiler-settings.cmake  poco-common-set-windows-compiler-settings.cmake  poco-cppunit-facade-set-linux-compiler-settings.cmake  poco-cppunit-facade-set-windows-compiler-settings.cmake  poco-cppunit-set-linux-compiler-settings.cmake  poco-cppunit-set-windows-compiler-settings.cmake  poco-foundation-set-linux-compiler-settings.cmake  poco-foundation-set-windows-compiler-settings.cmake  poco-json-set-linux-compiler-settings.cmake  poco-json-set-windows-compiler-settings.cmake  (+8 more)
lib_foreign/poco/poco_cppunit/: CMakeLists.txt
lib_foreign/poco/poco_cppunit_facade/: CMakeLists.txt
lib_foreign/poco/poco_foundation/: CMakeLists.txt
lib_foreign/poco/poco_json/: CMakeLists.txt
lib_foreign/poco/poco_seven_zip/: CMakeLists.txt
lib_foreign/poco/poco_util/: CMakeLists.txt
lib_foreign/poco/poco_xml/: CMakeLists.txt
lib_foreign/poco/poco_zip/: CMakeLists.txt
test_exe_foreign/te_cppunit/: CMakeLists.txt
test_exe_foreign/te_cppunit/_te_cppunit_cmake_settings/: te-cppunit-main-set-compiler-settings.cmake
test_exe_foreign/te_poco/: CMakeLists.txt
test_exe_foreign/te_poco/_te_poco_cmake_settings/: te-poco-main-set-compiler-settings.cmake
test_foreign/: CMakeLists.txt
test_foreign/poco/_test_poco_cmake_settings/: test-poco-foundation-set-compiler-settings.cmake  test-poco-json-set-compiler-settings.cmake  test-poco-util-set-compiler-settings.cmake  test-poco-zip-set-compiler-settings.cmake
test_foreign/poco/test_poco_foundation/: CMakeLists.txt
test_foreign/test_cppunit/: CMakeLists.txt
test_foreign/test_cppunit/_test_cu_cmake_settings/: test-cu-example-set-compiler-settings.cmake  test-cu-main-set-compiler-settings.cmake
test_foreign/test_cppunit/test_cppunit_main/: CMakeLists.txt
test_foreign/test_poco/: CMakeLists.txt
test_foreign/test_poco/_test_poco_cmake_settings/: test-poco-cppunit-set-compiler-settings.cmake  test-poco-foundation-set-compiler-settings.cmake  test-poco-json-set-compiler-settings.cmake  test-poco-seven-zip-set-compiler-settings.cmake  test-poco-util-set-compiler-settings.cmake  test-poco-xml-set-compiler-settings.cmake  test-poco-zip-set-compiler-settings.cmake
test_foreign/test_poco/test_poco_foundation/: CMakeLists.txt
test_foreign/test_poco/test_poco_json/: CMakeLists.txt
test_foreign/test_poco/test_poco_util/: CMakeLists.txt
test_foreign/test_poco/test_poco_xml/: CMakeLists.txt
test_foreign/test_poco/test_poco_zip/: CMakeLists.txt
(+71 files in other folders)
